// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleCard /> by default matches with snapshot 1`] = `
<div
  className="sc-bZQynM eFAFTJ k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-bdVaJa bwDdrh sc-bxivhb fcuXDk k-Card__imageContainer"
  >
    <img
      alt=""
      className="sc-bwzfXH iETJge k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with imageContainerRatio props matches with snapshot 1`] = `
<div
  className="sc-bZQynM eFAFTJ k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-bdVaJa bwDdrh sc-bxivhb gmfOHJ k-Card__imageContainer"
  >
    <img
      alt=""
      className="sc-bwzfXH iETJge k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> with withPlayerButtonOnImage props matches with snapshot 1`] = `
<div
  className="sc-bZQynM eFAFTJ k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-bdVaJa bwDdrh sc-bxivhb fcuXDk k-Card__imageContainer"
  >
    <div
      className="sc-htpNat PdKBI"
    >
      <span
        className="k-u-color-background1 k-u-size-default k-u-weight-regular"
      >
        ►
      </span>
    </div>
    <img
      alt=""
      className="sc-bwzfXH iETJge k-Card__image"
      src=""
    />
  </div>
</div>
`;

exports[`<SimpleCard /> without horizontalStroke prop matches snapshot 1`] = `
<div
  className="sc-bZQynM eFAFTJ k-Card k-Card--withoutBoxShadowOnHover"
>
  <div
    className="sc-bdVaJa bwDdrh sc-bxivhb fcuXDk k-Card__imageContainer"
  >
    <img
      alt=""
      className="sc-bwzfXH iETJge k-Card__image"
      src=""
    />
  </div>
</div>
`;
